# cwordle

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: game.rs  gamestate.rs  gameui.rs  main.rs  word-list.txt  words.rs
src/scripts/: find-non-ascii.py
tests/: integration_test.rs
